--- a/src/scss/06_components/__index.scss
+++ b/src/scss/06_components/__index.scss
@@ -1,5 +1,6 @@
 @import 'block/_index';
 @import 'forms/_index';
+@import 'helfi_calculator/_index';
 @import 'layout/_index';
 @import 'media/_index';
 @import 'messages/_index';
