--- a/src/scss/_hds.scss
+++ b/src/scss/_hds.scss
@@ -14,3 +14,4 @@
 @import 'xx_external/hds-core/lib/components/status-label/status-label.min.css';
 @import 'xx_external/hds-core/lib/components/text-input/text-input.min.css';
 @import 'xx_external/hds-core/lib/components/loading-spinner/loading-spinner.min.css';
+@import 'xx_external/hds-core/lib/components/selection-group/selection-group.min.css';
