--- a/src/scss/06_components/pages/_service.scss
+++ b/src/scss/06_components/pages/_service.scss
@@ -102,57 +102,49 @@ $teaser-icon-size-desktop: 48px;
 }
 
 .service.service--teaser-search-result {
-  padding-bottom: $gutter;
+  background-color: $color-white;
+  margin-bottom: $spacing;
   .service__link {
-    margin-top: $spacing-double;
-    padding: 0 $spacing-and-half $spacing-double;
-    padding-bottom: $spacing-half;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: $spacing-and-half;
     position: relative;
     text-decoration: none;
     width: 100%;
 
     @include breakpoint($breakpoint-m) {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      margin-top: 0;
       padding: $spacing-double;
-      padding-bottom: $spacing-half;
     }
     .service__title {
-
-      font-style: normal;
-      font-weight: $font-weight-medium;
-
-      @include font('special.card_title');
-      margin-bottom: $spacing-quarter;
+      @include font('h4');
+      margin-bottom: $spacing;
       margin-top: 0;
-      padding-right: $spacing-and-half;
 
       @include breakpoint($breakpoint-m) {
-        margin-bottom: 0;
-        padding-right: 0;
-        width: 100%;
         font-size: $base-font-size + 10;
+        margin-bottom: $spacing-half;
+        width: 100%;
       }
       @include breakpoint($breakpoint-l) {
-        font-size: $base-font-size * 2;
+        margin-bottom: $spacing;
       }
     }
     .service__content {
-      align-content: flex-start;
+      position: relative;
 
       .short-desc {
         font-size: $base-font-size;
         font-style: normal;
         font-weight: $font-weight-regular;
-        display: inline-flex;
-        width: 90%;
-        @include breakpoint($breakpoint-xs) {
-          width: 80%;
+        margin-bottom: $spacing;
+        padding-right: calc(#{$spacing} + #{$teaser-icon-size-mobile});
+        @include breakpoint($breakpoint-m) {
+          padding-right: calc(#{$spacing} + #{$teaser-icon-size-desktop} + #{$spacing});
         }
-        @include breakpoint($breakpoint-l) {
-          width: 90%;
+        p {
+          margin: 0;
+          padding: 0;
         }
       }
 
@@ -161,58 +153,43 @@ $teaser-icon-size-desktop: 48px;
         flex-wrap: wrap;
       }
       .channels {
-        display: inline-flex;
-        @include breakpoint($breakpoint-xs) {
-          width: 80%;
+        padding-right: calc(#{$spacing} + #{$teaser-icon-size-mobile});
+        @include breakpoint($breakpoint-m) {
+          padding-right: calc(#{$spacing} + #{$teaser-icon-size-desktop} + #{$spacing});
         }
-        @include breakpoint($breakpoint-l) {
-          width: 90%;
-        }
-        //width: 90%;
         ul {
+          display: flex;
+          flex-wrap: wrap;
+          gap: $spacing-half;
           list-style: none;
           margin: 0;
           padding: 0;
-          :nth-child(even) {
-            margin-left: $spacing-half;
-          }
         }
         li {
+          @include font('special.helper_text');
           background-color: rgb(222, 223, 225);
-          border-radius: 25px;
+          border-radius: $spacing;
           display: inline-block;
-          padding: $spacing-half $gutter;
-          font-style: normal;
           font-weight: $font-weight-medium;
-          font-size: $base-font-size;
-          @include breakpoint(540px) {
-              & + li {
-                margin-left: $spacing-half;
-              }
-          }
+          margin: 0;
+          padding: $spacing-half $gutter;
         }
       }
     }
     .service__read-more {
-      display: inline-flex;
-      @include breakpoint($breakpoint-m) {
-        justify-content: flex-end;
-        width: 100%;
-      }
-
+      bottom: 0;
+      position: absolute;
+      right: 0;
       .hel-icon {
-        position: absolute;
-        bottom: 10%;
         --icon-size: #{$teaser-icon-size-mobile};
-        margin-right: $spacing;
-        transition: all 0.3s;
+        @include breakpoint($breakpoint-m) {
+          --icon-size: #{$teaser-icon-size-desktop};
+          margin-right: $spacing;
+          margin-top: $spacing-and-half;
+          transition: all 0.3s;
+        }
         @media (prefers-reduced-motion) {
           transition: none;
-        }
-
-        @include breakpoint($breakpoint-l) {
-          --icon-size: #{ $teaser-icon-size-desktop};
-          margin-top: $spacing-and-half;
         }
       }
     }
@@ -225,7 +202,9 @@ $teaser-icon-size-desktop: 48px;
 
       .service__read-more {
         .hel-icon {
-          transform: translateX($spacing);
+          @include breakpoint($breakpoint-m) {
+            transform: translateX($spacing);
+          }
           @media (prefers-reduced-motion) {
             transform: none;
           }
@@ -233,7 +212,6 @@ $teaser-icon-size-desktop: 48px;
       }
     }
   }
-
 }
 
 .service--units__container {
