UHF-7138: proposition for a css solution for scroll bug

--- a/src/scss/06_components/navigation/global/_menu-toggle.scss
+++ b/src/scss/06_components/navigation/global/_menu-toggle.scss
@@ -273,9 +273,10 @@ $label-font: 'special.navigation.icon_label';
   & ~ .wrapper > *:not(.header), // All wrapper content except .header
   & ~ .footer {
     @include breakpoint(max-width $breakpoint-l) {
-      display: none; // Hide other content when menu is visible, to block tabbing behind menu
+      // display: none; // Hide other content when menu is visible, to block tabbing behind menu
       // stylelint-disable-next-line plugin/no-low-performance-animation-properties
       transition: display 0s linear 10s; // low performance property is ok here as it's just a toggle
+      visibility: hidden;
     }
   }
 }
