UHF-6856: Fix arrow to work as link

--- a/src/scss/06_components/pages/_unit.scss
+++ b/src/scss/06_components/pages/_unit.scss
@@ -377,6 +377,7 @@
     .hel-icon {
       @include hover-link-arrow-transition();
       margin-left: $spacing-half;
+      pointer-events: none;
     }
   }
 
