UHF-X: Break words to fix layout in list-of-links

--- a/src/scss/06_components/paragraphs/_list-of-links.scss
+++ b/src/scss/06_components/paragraphs/_list-of-links.scss
@@ -46,6 +46,7 @@ $-item-spacing: $spacing-triple;
     flex-direction: column;
     justify-content: center;
     min-height: 90px;
+    overflow-wrap: anywhere;
     text-decoration: none;
     width: 100%;
 
