--- a/src/scss/06_components/block/_react-and-share.scss
+++ b/src/scss/06_components/block/_react-and-share.scss
@@ -5,12 +5,15 @@
 
   &:last-child {
     background: $color-black-5;
-    margin-bottom: -112px;
 
     .rns .rns-plugin {
       padding-bottom: 112px;
     }
   }
+}
+
+.js .block--react-and-share:last-child {
+  margin-bottom: -112px;
 }
 
 .rns {
