UHF-6128: Removed handorgel library and changed the accordion functionality to use details and summary elements, added javascript functionality that remembers what accordions you had open when browsing the site

--- a/templates/component/accordion.twig
+++ b/templates/component/accordion.twig
@@ -8,24 +8,45 @@
 
 {{ attach_library('hdbt/accordion') }}
 
-<div class="accordion__wrapper handorgel">
+{#<div class="accordion__wrapper handorgel">#}
 
-  <{{ heading_level|default('h2') }} class="accordion-item__header handorgel__header">
-    <button class="accordion-item__button accordion-item__button--toggle handorgel__header__button">
+{#  <{{ heading_level|default('h2') }} class="accordion-item__header handorgel__header">#}
+{#    <button class="accordion-item__button accordion-item__button--toggle handorgel__header__button">#}
+{#      {% if heading_icon %}#}
+{#        <div class="accordion-item__icon">#}
+{#          {% include '@hdbt/misc/icon.twig' ignore missing with {icon: heading_icon} %}#}
+{#        </div>#}
+{#      {% endif %}#}
+{#      {{ heading|default('Missing heading'|t) }}#}
+{#    </button>#}
+{#  </{{ heading_level|default('h2')}}>#}
+{#  <div class="accordion-item__content handorgel__content">#}
+{#    <div class="accordion-item__content__inner handorgel__content__inner">#}
+{#      {{ content|default('Missing content'|t) }}#}
+{#      <span class="accordion-item__button accordion-item__button--close" role="button" tabindex="0">#}
+{#        {{ 'Close'|t }}{% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'angle-up'} %}#}
+{#      </span>#}
+{#    </div>#}
+{#  </div>#}
+{#</div>#}
+
+{% set accordionId = 'accordion--' ~ random() %}
+
+<details class="accordion-item" id="{{ accordionId }}">
+  <summary class="accordion-item__summary">
+    <{{ heading_level|default('h2') }} class="accordion-item__header">
       {% if heading_icon %}
-        <div class="accordion-item__icon">
+        <span class="accordion-item__icon">
           {% include '@hdbt/misc/icon.twig' ignore missing with {icon: heading_icon} %}
-        </div>
+        </span>
       {% endif %}
       {{ heading|default('Missing heading'|t) }}
-    </button>
-  </{{ heading_level|default('h2')}}>
-  <div class="accordion-item__content handorgel__content">
-    <div class="accordion-item__content__inner handorgel__content__inner">
-      {{ content|default('Missing content'|t) }}
-      <span class="accordion-item__button accordion-item__button--close" role="button" tabindex="0">
-        {{ 'Close'|t }}{% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'angle-up'} %}
-      </span>
-    </div>
+    </{{ heading_level|default('h2')}}>
+  </summary>
+  <div class="accordion-item__content">
+    {{ content|default('Missing content'|t) }}
+    <span class="accordion-item__button accordion-item__button--close" role="button" tabindex="0">
+    {{ 'Close'|t }}{% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'angle-up'} %}
+  </span>
   </div>
-</div>
+</details>
