UHF-7111: Chaged teaser to use new template

--- a/templates/module/helfi_tpr/tpr-unit--teaser-with-image.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit--teaser-with-image.html.twig
@@ -1,49 +1,1 @@
-{% set image_attributes = create_attribute() %}
-
-{% if content.picture_url_override|render or content.picture_url|render %}
-  {% set has_image = TRUE %}
-{% endif %}
-
-{%
-  set picture_classes = [
-    'unit__image',
-    has_image ? 'unit__image--image' : 'unit__image--placeholder'
-  ]
-%}
-
-<div class="unit unit--teaser unit--teaser_with_image">
-  <div{{ image_attributes.addClass(picture_classes) }}>
-    {% if content.picture_url_override|render %}
-      {{ content.picture_url_override }}
-    {% elseif content.picture_url|render %}
-      {{ content.picture_url }}
-    {% else %}
-      {% include "@hdbt/misc/image-placeholder.twig" ignore missing %}
-    {% endif %}
-  </div>
-
-  <div class="unit__text">
-    <div class="unit__text__content">
-      <{{ unit_title_level|default('h3') }} class="unit__title">
-        {% set unit_link_attributes = {
-          'class': [
-            'unit__link',
-          ],
-        } %}
-        {{ link(entity.label, unit_url, unit_link_attributes) }}
-      </{{ unit_title_level|default('h3') }}>
-      <div class="unit__info">
-        {% if content.address|render %}
-          <div class="unit__info-row unit__info-row--address">
-            {{ content.address }}
-          </div>
-        {% endif %}
-      </div>
-      {{ supports_swedish }}
-    </div>
-    <div class="unit__read-more">
-      <span class="unit__read-more__text">{% trans with {'context': 'Unit teaser link'} %}See opening hours and contact details{% endtrans %}</span>
-      {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'arrow-right'} %}
-    </div>
-  </div>
-</div>
+{% include '@hdbt/module/helfi_tpr/tpr-unit--teaser.html.twig' %}
