UHF-7111: Added comments for removal

--- a/templates/module/helfi_tpr/tpr-unit--teaser.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit--teaser.html.twig
@@ -1,29 +1,2 @@
-{% if 'sv' in provided_languages %}
-  {% set card_tags = [{tag: 'Service in Swedish'|t({}, {'context': 'TPR unit also offers service in Swedish'})}] %}
-{% endif %}
-
-{% set card_image %}
-  {% if content.picture_url_override|render %}
-    {{ content.picture_url_override }}
-  {% elseif content.picture_url|render %}
-    {{ content.picture_url }}
-  {% else %}
-    {% include "@hdbt/misc/image-placeholder.twig" ignore missing %}
-  {% endif %}
-{% endset %}
-
-{% embed '@hdbt/component/card.twig' with {
-  card_modifier_class: 'card--tpr-teaser',
-  card_image: card_image,
-  card_title: entity.label,
-  card_url: unit_url,
-  card_tags: card_tags,
-  card_metas: [
-    {
-      icon: 'location',
-      label: 'Address'|t,
-      content: content.address,
-    },
-  ],
-  } %}
-{% endembed %}
+{# Remove this file after siteimprove clears its removal #}
+{% include '@hdbt/module/helfi_tpr/tpr-unit--teaser-with-image.html.twig' with { teaser_class: 'tpr-unit--teaser-html-twig'}%}
