--- a/templates/module/helfi_tpr/tpr-unit--minimal.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit--minimal.html.twig
@@ -1,21 +1,24 @@
-<div class="unit unit--minimal">
-  <a href="{{ url('entity.tpr_unit.canonical', { 'tpr_unit': entity.id() }) }}" class="unit__link">
-    <div class="unit__text">
-      <div class="unit__text__content">
-        <{{ unit_title_level|default('h3') }} class="unit__title">
-          {{ entity.label }}
-        </{{ unit_title_level|default('h3') }}>
-        <div class="unit__info">
-          {% if content.address|render %}
-            <div class="unit__info-row unit__info-row--address">
-              {{ content.address }}
-            </div>
-          {% endif %}
-        </div>
-      </div>
-      <div class="unit__read-more">
-        {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'arrow-right'} %}
-      </div>
-    </div>
-  </a>
-</div>
+{% set card_metas = [] %}
+{% if content.address|render %}
+  {% set card_metas = card_metas|merge([{
+      icon: 'location',
+      label: 'Address'|t,
+      content: content.address,
+    }]) %}
+{% endif %}
+{% if content.distance|render %}
+  {% set card_metas = card_metas|merge([{
+      icon: 'locate',
+      label: 'Distance'|t,
+      content: content.distance,
+    }]) %}
+{% endif %}
+
+{% embed '@hdbt/component/card.twig' with {
+  card_modifier_class: 'card--tpr-minimal',
+  card_title: entity.label,
+  card_url: unit_url,
+  card_tags: card_tags,
+  card_metas: card_metas,
+  } %}
+{% endembed %}
