UHF-X: Fix phasing item line-height to use proper units

--- a/src/scss/00_functions/_typography_functions.scss
+++ b/src/scss/00_functions/_typography_functions.scss
@@ -8,3 +8,14 @@
 
   @return $-line-height;
 }
+
+@function get-font-size($style, $unremify: false) {
+  $-path: 'font.#{$style}';
+  $-font-size: get('#{$-path}.font-size');
+
+  @if $unremify {
+    @return unremify($-font-size);
+  }
+
+  @return $-font-size;
+}
