--- a/src/scss/06_components/paragraphs/_phasing.scss
+++ b/src/scss/06_components/paragraphs/_phasing.scss
@@ -8,8 +8,12 @@ $-circle-size--ol: 40px;
 $-circle-size--ol-l: $spacing-triple;
 
 .component--phasing {
-  --item-title-lineheight: 1.5; // As we have paragraph, its line-height must be at least 1.5
+  --item-title-lineheight: #{1.5 * get-font-size('h4')}; // As we have paragraph, its line-height must be at least 1.5
   counter-reset: item;
+
+  @include breakpoint($breakpoint-l) {
+    --item-title-lineheight: #{1.5 * get-font-size('h4.breakpoint_l')};
+  }
 
   .component__content {
     padding-left: 0;
@@ -105,10 +109,10 @@ $-circle-size--ol-l: $spacing-triple;
 
 // If phasing element is inside of an accordion
 .component--accordion .component--phasing {
-  --item-title-lineheight: #{get-line-height('h5')};
+  --item-title-lineheight: #{1.5 * get-font-size('h5')}; // As we have paragraph, its line-height must be at least 1.5
 
   @include breakpoint($breakpoint-l) {
-    --item-title-lineheight: #{get-line-height('h5.breakpoint_l')};
+    --item-title-lineheight: #{1.5 * get-font-size('h5.breakpoint_l')};
   }
 
   .phasing__item--with-numbers::after,
