UHF-7111: Add support for external icon arrow

--- a/templates/component/card.twig
+++ b/templates/component/card.twig
@@ -5,13 +5,11 @@
     card_title_level: 'h3',
     card_title: 'Otsikko',
     card_url: 'https://www.hel.fi/fi/',
-    card_url_external: external,
+    card_url_external: false,
     card_category_tag: {
       tag: 'Kategoria',
       color: 'gold',
     },
-    card_category: 'Kategoria',
-    card_category_color: 'gold',
     card_description: 'Lyhyt kuvaus',
     card_description_html: false,
     card_helptext: 'Ohjeteksti',
