--- a/src/scss/05_objects/_card.scss
+++ b/src/scss/05_objects/_card.scss
@@ -71,6 +71,23 @@ $item-gap: $spacing-half;
       transform: none;
     }
   }
+
+  .card--external &::after {
+    @include pseudo-icon-replace('link-external');
+  }
+
+  .card--external:focus-within &::after,
+  .card--external:hover &::after {
+    transform: translate($spacing-quarter, -$spacing-quarter);
+
+    @media (prefers-reduced-motion) {
+      transform: none;
+    }
+  }
+}
+
+.card--external .link__type--external {
+  @include visually-hidden; // Avoid two arrows on card visually, but let screen readers see it.
 }
 
 .card .content-tags {
