UHF-X Changed the announcement width to match with the content with

--- a/templates/content/node--announcement--default.html.twig
+++ b/templates/content/node--announcement--default.html.twig
@@ -8,7 +8,7 @@
 
 {% set link = content.field_announcement_link[0] %}
 
-<div class="announcement js-announcement {{ block_modifier }}" data-uuid="{{ node.uuid.value }}">
+<div class="announcement js-announcement {{ block_modifier }} container" data-uuid="{{ node.uuid.value }}">
   <div class="announcement__container">
     <div class="announcement__content">
       {% if content.body|render != null %}
