UHF-7111: Fix scss syntax

--- a/src/scss/05_objects/_card.scss
+++ b/src/scss/05_objects/_card.scss
@@ -8,7 +8,7 @@ $item-gap: $spacing-half;
   position: relative;
 
   & + & {
-    margin-top: 16px;
+    margin-top: $spacing;
   }
 
   @include breakpoint($breakpoint-s) {
