--- a/templates/paragraphs/paragraph--popular-services.html.twig
+++ b/templates/paragraphs/paragraph--popular-services.html.twig
@@ -2,12 +2,12 @@
   {% embed "@hdbt/misc/component.twig" with
     {
       component_classes: [ 'component--popular-services' ],
-      component_title: 'Popular services'|t({}, {'context': 'Popular services paragraph title'}),
+      component_title: content.field_popular_services_title|render ? content.field_popular_services_title : 'Popular services'|t({}, {'context': 'Popular services paragraph title'}),
       component_content_class: 'popular-services',
     }
   %}
       {% block component_content %}
-        {{ content }}
+        {{ content.field_service_items }}
       {% endblock component_content %}
   {% endembed %}
 {% endblock paragraph %}
