UHF-X Fixed login screen layout if there is more than one tunnistamo-login button

--- a/src/scss/06_components/forms/_openid-connect-login-form.scss
+++ b/src/scss/06_components/forms/_openid-connect-login-form.scss
@@ -7,4 +7,12 @@
   input {
     width: 100%;
   }
+
+  > div {
+    margin-top: $spacing;
+
+    &:first-child {
+      margin-top: 0;
+    }
+  }
 }
